The args field in the SPVM::Builder::Resource is renamed to the argv field.
  [Incompatible Canges]
    * The args field in the SPVM::Builder::Resource is renamed to the argv field.

--- a/Changes
+++ b/Changes
@@ -57,6 +57,7 @@
       s/native module/native class/g
     * The --module-dir option in the spvmcc command is renamed to the --class-path.
     * The regex that remove extention from config file is changed to (\.[^\.]+)?\.config$.
+    * The args field in the SPVM::Builder::Resource is renamed to the argv field.
 0.9704 2023-04-08
   [New Features]
     * Added the --interface option to the spvmdist command.
