--- a/Changes
+++ b/Changes
@@ -15,6 +15,8 @@
     * Added the config_bootstrap field in the SPVM::Builder::Config::Exe class.
     * Added the config_spvm_core field in the SPVM::Builder::Config::Exe class.
     * Added the create_default_config function in the SPVM::Builder::Util::API module.
+    * Added the -r, --required-resources option in the spvmcc command.
+
   [Document Changes]
     * Renamed SPVM::Document::NativeModule to SPVM::Document::NativeClass.
   [Incompatible Canges]
