--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.9705 2023-04-12
+  [Exception Messages Changes]
+    * Improved English syntax.
+  [Compilation Error Messages Changes]
+    * Improved English syntax.
+  [Document Changes]
+    * Improved English syntax.
+
 0.9704 2023-04-11
   [Prerequirement Changes]
     * JSON::PP 2.27105+ is required.
