--- a/Changes
+++ b/Changes
@@ -5,7 +5,8 @@
     * Improved English syntax.
   [Document Changes]
     * Improved English syntax.
-
+    * SPVM::Document::Tutorial::Complex is moved to "Complex - SPVM Wiki"
+      
 0.9704 2023-04-11
   [Prerequirement Changes]
     * JSON::PP 2.27105+ is required.
