Getting environment variables is normalized.
  [Changes]
    * Getting environment variables is normalized.

--- a/Changes
+++ b/Changes
@@ -8,6 +8,8 @@
     * SPVM::Document::Tutorial::Complex is moved to "Complex - SPVM Wiki"
     * SPVM::Document::Tutorial is moved to "Tutorial - SPVM Wiki"
     * SPVM::Document::Benchmark is moved to "Benchmark - SPVM Wiki"
+  [Changes]
+    * Getting environment variables is normalized.
       
 0.9704 2023-04-11
   [Prerequirement Changes]
