--- a/Changes
+++ b/Changes
@@ -13,7 +13,8 @@
   [Changes]
     * Getting environment variables is normalized.
     * Removed the unused SPVM::Compiler::Util class.
-      
+  [Incompatible Changes]
+    * The create_merged_ccflags method in the SPVM::Builder::CompileInfo is removed.
 0.9704 2023-04-11
   [Prerequirement Changes]
     * JSON::PP 2.27105+ is required.
