--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
     * The create_merged_ccflags method in the SPVM::Builder::CompileInfo is removed.
     * Removed the cc field in the SPVM::Builder::CompileInfo class.
     * Removed the ccflags field in the SPVM::Builder::CompileInfo class.
+    * Removed the optimize field in the SPVM::Builder::CompileInfo class.
 0.9704 2023-04-11
   [Prerequirement Changes]
     * JSON::PP 2.27105+ is required.
