--- a/Changes
+++ b/Changes
@@ -18,6 +18,8 @@
     * Removed the cc field in the SPVM::Builder::CompileInfo class.
     * Removed the ccflags field in the SPVM::Builder::CompileInfo class.
     * Removed the optimize field in the SPVM::Builder::CompileInfo class.
+    * Removed the include_dirs field in the SPVM::Builder::CompileInfo class.
+    * Removed the builder_include_dir field in the SPVM::Builder::CompileInfo class.
 0.9704 2023-04-11
   [Prerequirement Changes]
     * JSON::PP 2.27105+ is required.
