--- a/Changes
+++ b/Changes
@@ -20,6 +20,9 @@
     * Removed the optimize field in the SPVM::Builder::CompileInfo class.
     * Removed the include_dirs field in the SPVM::Builder::CompileInfo class.
     * Removed the builder_include_dir field in the SPVM::Builder::CompileInfo class.
+    * Removed the ld field in the SPVM::Builder::LinkInfo class.
+  [Bug Fix]
+    * Fixed the bug that the config field in the SPVM::Builder::LinkInfo class is not set.
 0.9704 2023-04-11
   [Prerequirement Changes]
     * JSON::PP 2.27105+ is required.
