Removed the ldflags field in the SPVM::Builder::LinkInfo class and etc.
  [Incompatible Changes]
    * Removed the ldflags field in the SPVM::Builder::LinkInfo class.
    * Removed the dynamic_lib_ldflags field in the SPVM::Builder::LinkInfo class.
    * Removed the ld_optimize field in the SPVM::Builder::LinkInfo class.
    * Removed the output_type field in the SPVM::Builder::LinkInfo class.

--- a/Changes
+++ b/Changes
@@ -21,6 +21,10 @@
     * Removed the include_dirs field in the SPVM::Builder::CompileInfo class.
     * Removed the builder_include_dir field in the SPVM::Builder::CompileInfo class.
     * Removed the ld field in the SPVM::Builder::LinkInfo class.
+    * Removed the ldflags field in the SPVM::Builder::LinkInfo class.
+    * Removed the dynamic_lib_ldflags field in the SPVM::Builder::LinkInfo class.
+    * Removed the ld_optimize field in the SPVM::Builder::LinkInfo class.
+    * Removed the output_type field in the SPVM::Builder::LinkInfo class.
   [Bug Fix]
     * Fixed the bug that the config field in the SPVM::Builder::LinkInfo class is not set.
 0.9704 2023-04-11
