--- a/Changes
+++ b/Changes
@@ -28,6 +28,8 @@
     * Removed the lib_dirs field in the SPVM::Builder::LinkInfo class.
     * Removed the lib_infos field in the SPVM::Builder::LinkInfo class.
     * Renamed the object_file_infos field in the SPVM::Builder::LinkInfo class to object_files.
+    * Removed the get_native_include_dir method in the SPVM::Builder::Config class and added the native_include_dir field in the SPVM::Builder::Config class.
+    * Removed the get_native_src_dir method in the SPVM::Builder::Config class and added the native_src_dir field in the SPVM::Builder::Config class.
   [Bug Fix]
     * Fixed the bug that the config field in the SPVM::Builder::LinkInfo class is not set.
 0.9704 2023-04-11
