--- a/Changes
+++ b/Changes
@@ -31,6 +31,8 @@
     * Removed the get_native_include_dir method in the SPVM::Builder::Config class and added the native_include_dir field in the SPVM::Builder::Config class.
     * Removed the get_native_src_dir method in the SPVM::Builder::Config class and added the native_src_dir field in the SPVM::Builder::Config class.
     * Renamed the create_merged_ldflags method in the SPVM::Builder::LinkInfo class to the create_link_command_args method.
+    * Renamed the to_string method in the SPVM::Builder::LinkInfo class to the to_cmd method.
+    * Renamed the to_string method in the SPVM::Builder::CompileInfo class to the to_cmd method.
   [Bug Fix]
     * Fixed the bug that the config field in the SPVM::Builder::LinkInfo class is not set.
 0.9704 2023-04-11
