--- a/Changes
+++ b/Changes
@@ -36,6 +36,7 @@
     * Renamed the to_string method in the SPVM::Builder::CompileInfo class to the to_cmd method.
     * Removed the class_name field in the SPVM::Builder::LinkInfo class to the to_cmd method.
     * Renamed the file_flag field in the SPVM::Builder::LibInfo to the is_abs field.
+    * Removed the config field in the SPVM::Builder::LibInfo to the is_abs field.
   [Bug Fix]
     * Fixed the bug that the config field in the SPVM::Builder::LinkInfo class is not set.
 0.9704 2023-04-11
