--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.9705 2023-04-12
+0.9706 2023-04-13
+  [New Features]
+    * Added the disable_resource field in the SPVM::Builder::Config class.
+0.9705 2023-04-13
   [New Features]
     * Added the SPVM_CC_QUIET environment variable.
     * Added the class_name field in the SPVM::Builder::Config class.
