--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * Added the disable_resource field in the SPVM::Builder::Config class.
   [Incompatible Changes]
     * Removed the set_std method in the SPVM::Builder::Config and added the std field.
+    * Renamed the static field in the SPVM::Builder::LibInfo to the is_static field.
 0.9705 2023-04-13
   [New Features]
     * Added the SPVM_CC_QUIET environment variable.
