--- a/Changes
+++ b/Changes
@@ -1,9 +1,11 @@
 0.9706 2023-04-13
   [New Features]
     * Added the disable_resource field in the SPVM::Builder::Config class.
+    * Added the file field in the SPVM::Builder::ObjectFileInfo class.
   [Incompatible Changes]
     * Removed the set_std method in the SPVM::Builder::Config and added the std field.
     * Renamed the static field in the SPVM::Builder::LibInfo to the is_static field.
+    * The to_string method in the SPVM::Builder::ObjectFileInfo gets to return the file field.
 0.9705 2023-04-13
   [New Features]
     * Added the SPVM_CC_QUIET environment variable.
