--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@
     * Removed the set_std method in the SPVM::Builder::Config and added the std field.
     * Renamed the static field in the SPVM::Builder::LibInfo to the is_static field.
     * The to_string method in the SPVM::Builder::ObjectFileInfo gets to return the file field.
+  [Bug Fix]
+    * Fixed the bug that the to_string method in the SPVM::Builder::CompileInfo is not renamed to the to_cmd method.
 0.9705 2023-04-13
   [New Features]
     * Added the SPVM_CC_QUIET environment variable.
