--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 0.9706 2023-04-13
+  [Concept Changes]
+    * Call Stack is renamed to Excution Stack
+      because this is a not call stack.
   [New Features]
     * Added the disable_resource field in the SPVM::Builder::Config class.
     * Added the file field in the SPVM::Builder::ObjectFileInfo class.
@@ -8,6 +11,8 @@
     * The to_string method in the SPVM::Builder::ObjectFileInfo gets to return the file field.
   [Bug Fix]
     * Fixed the bug that the to_string method in the SPVM::Builder::CompileInfo is not renamed to the to_cmd method.
+  [Document Improvement]
+    * SPVM::Document::NativeClass is improved.
 0.9705 2023-04-13
   [New Features]
     * Added the SPVM_CC_QUIET environment variable.
