--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 0.9707 2023-04-18
   [New Features]
     * Added the version declaration syntax.
+      class Foo {
+        version "1.001"
+      }
     * Added the following Runtime Native API.
       int32_t (*get_class_version_id)(void* runtime, int32_t class_id);
 
