"Reader" is renamed to "Getter Method" and etc.
  [Document Changes]
    * "Reader" is renamed to "Getter Method"
    * "Writer" is renamed to "Setter Method"

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.9708 2023-04-19
+  [Document Changes]
+    * "Reader" is renamed to "Getter Method"
+    * "Writer" is renamed to "Setter Method"
 0.9707 2023-04-19
   [New Features]
     * Added the version declaration syntax.
