--- a/Changes
+++ b/Changes
@@ -4,6 +4,10 @@
     
       const char* (*get_spvm_version)(SPVM_ENV* env, SPVM_VALUE* stack);
     
+    * Added the following method in the Fn class.
+    
+      static method get_spvm_version : string ();
+    
   [Document Changes]
     * "Reader" is renamed to "Getter Method"
     * "Writer" is renamed to "Setter Method"
