--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.971002 2023-04-21
+  [Document Changes]
+    * "Bool Conversion" is renamed to "Boolean Conversion".
+    * Removed "Bool Literal", and added "true Operator" and "false Operator".
+  [Incompatible Changes]
+    * Removed the TRUE class variable in the Bool class and added the new_true method.
+      Removed the FALSE class variable in the Bool class and added the new_false method.
+      This changes are needed for thread safetiness of the SPVM language.
 0.971001 2023-04-21
   [New Features]
     * Added the following Native APIs.
