--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.971002 2023-04-22
+  [Makefile.PL Bug Fix]
+    * Fixed the bug that the version of SPVM can't get from SPVM.pm.
 0.971001 2023-04-21
   [New Features]
     * Added the following Native APIs.
