--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 0.971003 2023-04-24
   [Incompatible Changes]
     * The version string is not normalized.
+    * Renamed the following Runtime APIs.
+      [Before]  int32_t (*get_class_version_id)(void* runtime, int32_t class_id);
+      [After]  int32_t (*get_class_version_string_id)(void* runtime, int32_t class_id);
   [Compilation Error Message Improvement]
     * Compilation error messages of the version string are improved.
 0.971002 2023-04-22
