--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 0.971003 2023-04-24
+  [New Features]
+    * Added the following Native APIs.
+
+      const char* (*get_version_string)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t class_id);
+      double (*get_version_number)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t class_id);
+    
   [Incompatible Changes]
     * The version string is not normalized.
     * Renamed the following Runtime APIs.
