--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
   [New Features]
     * Added the following Native APIs.
 
+      double (*get_spvm_version_number)(SPVM_ENV* env, SPVM_VALUE* stack);
       const char* (*get_version_string)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t class_id);
       double (*get_version_number)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t class_id);
     
