--- a/Changes
+++ b/Changes
@@ -5,6 +5,9 @@
       double (*get_spvm_version_number)(SPVM_ENV* env, SPVM_VALUE* stack);
       const char* (*get_version_string)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t class_id);
       double (*get_version_number)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t class_id);
+    * Added the following method in the Fn class.
+    
+      static method get_spvm_version_number : double ();
     
   [Incompatible Changes]
     * The version string is not normalized.
