--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.971009 2023-04-28
+  [Test Improvement]
+    * Added tests of the version string.
+    
 0.971008 2023-04-27
   [Test Fix]
     * Fixed the version number tests.
