--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@
     * Added tests of the version string.
   [Bug Fix]
     * Fixed the bug that doing "use SPVM 'MyClass'" twice output warnings.
+    * Fixed the bug that type conversion from long to string doesn't work well.
+  [Bug Fix and Breaking Binary Compatibility]
+    * Fixed the bug that temporary buffer in (string) type cast is not initialized properly.
+    * Fixed the bug that temporary buffer for exeption of calling methodin is not initialized properly.
 0.971008 2023-04-27
   [Test Fix]
     * Fixed the version number tests.
