Fixed warning that the binding subroutines are redefined when it is used twice.
  [Warning Fix]
    * Fixed warning that the binding subroutines are redefined when it is used twice.

--- a/Changes
+++ b/Changes
@@ -9,7 +9,7 @@
   [Changes]
     * The die operator performet numeric to string convertion.
     * The die operator can't receive undef.
-    
+    * The binding INIT block to Perl is skipped.
   [Compilation Error Message Changes]
     * The format of compilation error messages is changed.
       [Before]
@@ -24,7 +24,8 @@
     * The default die message is changed to "Died.".
   [Message Changes]
     * The default warn message is changed to "Warned.".
-    
+  [Warning Fix]
+    * Fixed warning that the binding subroutines are redefined when it is used twice.
 0.971010 2023-05-02
   [Notice of Backward Compatibility Breaking]]
     * The index_v2 method in the Fn class is added, and the definition and implementation of the index method in the Fn class will be replaced to the index_v2 method in the Fn class.
