--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.971013 2023-05-04
+  [Changes]
+    * The compile error message of yacc are uniformed.
 0.971012 2023-05-03
   [Incompatible Changes]
     * The index method in the Fn is replaced with the index_v2 method.
