--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.971013 2023-05-04
   [Changes]
     * The compile error message of yacc are uniformed.
+  [Incompatible Changes and Breaking Binary Compatibility]
+    * The call_method Native API is renamed to call_method_raw.
 0.971012 2023-05-03
   [Incompatible Changes]
     * The index method in the Fn is replaced with the index_v2 method.
