The compile_type_name operator is added.
  [New Features]
    * The compile_type_name operator is added.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * The die statemenet support undef operand.
     
       die undef;
+    * The compile_type_name operator is added.
   [Changes]
     * The compile error message of yacc are uniformed.
     * The indent of the stack trace of an exception is now 2.
