--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.973 2023-05-06
+  [Changes]
+    * Default value is passed to the arguments of native methods.
 0.972 2023-05-04
   [New Features]
     * The die statemenet support undef operand.
